tests/copies/newAndNeedChangeTests/fail/Byte.java
package fail;

import java.lang.System;

public class Byte {

  public static void main(String[] args ) {
    byte thisIsNotAByte = 123;
  }

}
